# yalantinglibs

./: .clang-format  .gitignore  CMakeLists.txt  compile_in_1804_gcc9.sh
cmake/: install.cmake  struct_pb_helper.cmake
include/ylt/standalone/iguana/: pb_util.hpp  reflection.hpp
src/example/: CMakeLists.txt  addressbook.proto  base.proto  chasis.proto  gnss.proto  image.proto  imu.proto  perception.proto  pointcloud.proto  state.proto  tutorial.cpp  zframe.proto  zimage.cpp  zimage.hpp  zpointcloud.cpp  zpointcloud.hpp
src/example/cmake/: struct_pb.cmake
src/example/message/: CMakeLists.txt  chasis.proto  gnss.proto  image.proto  imu.proto  perception.proto  pointcloud.proto  state.proto  zframe.proto  zimage.cpp  zimage.hpp  zpointcloud.cpp  zpointcloud.hpp
src/protoc-plugin/: CMakeLists.txt  EnumFieldGenerator.cpp  FieldGenerator.cpp  FileGenerator.cpp  FileGenerator.h  MapFieldGenerator.cpp  MapFieldGenerator.h  MessageGenerator.h  Options.hpp  StructGenerator.cpp  helpers.hpp
src/protoc-plugin/cmake/: struct_pb.cmake
src/protoc_plugin/: CMakeLists.txt  EnumGenerator.h  FileGenerator.cpp  MessageFieldGenerator.cpp  MessageFieldGenerator.h  OneofFieldGenerator.h  Options.hpp  PrimitiveFieldGenerator.cpp  helpers.cpp
src/struct_pb/: CMakeLists.txt
src/struct_pb/examples/: CMakeLists.txt  addressbook.proto  main.cpp  proto_to_struct.proto  tutorial.cpp
src/struct_pb/protoc-plugin/: CMakeLists.txt  EnumFieldGenerator.cpp  EnumFieldGenerator.h  EnumGenerator.cpp  EnumGenerator.h  FieldGenerator.cpp  FieldGenerator.h  FileGenerator.cpp  FileGenerator.h  MapFieldGenerator.cpp  MapFieldGenerator.h  MessageFieldGenerator.cpp  MessageFieldGenerator.h  MessageGenerator.cpp  MessageGenerator.h  OneofFieldGenerator.cpp  Options.hpp  PrimitiveFieldGenerator.cpp  PrimitiveFieldGenerator.h  StringFieldGenerator.cpp  StringFieldGenerator.h  StructGenerator.cpp  helpers.hpp  main.cpp  printer.cc  printer.h  proto_to_struct.pb.cc  proto_to_struct.pb.h  proto_to_struct.proto
src/struct_pb/protoc-plugin/cmake/: struct_pb.cmake
src/struct_pb/protoc-plugin/example/: CMakeLists.txt  addressbook.proto  base.proto  chasis.proto  gnss.proto  image.proto  imu.proto  perception.proto  pointcloud.proto  proto_to_struct.proto  state.proto  tutorial.cpp  xyzit_points.hpp  zimage.hpp  zpointcloud.cpp  zpointcloud.hpp
src/struct_pb/tests/: main.cpp
